ingress-test/test-http-backend-install.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-http-backend
  labels:
    app: test-http-backend
    service: test-http-backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: test-http-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-http-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-http-backend
      version: v1
  template:
    metadata:
      labels:
        app: test-http-backend
        version: v1
    spec:
      serviceAccountName: test-http-backend
      containers:
        - image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-http-backend
spec:
  parentRefs:
    - name: home-lab
  hostnames:
    - "test-http.home.lab"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: test-http-backend
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
